* update startup command