@@ -1,9 +1,15 @@
-@rem >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-rem java -Xms128m -Xmx512m -verbose:gc -Xloggc:gc.log -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -cp .;.\lib\*; com.generallycloud.nio.container.http11.startup.HttpServerStartup
+cd ../../baseio
+call build-package.bat
 
+cd ../baseio-sample/baseio-sample-http
+call mvn clean package -P run -DskipTests
 
+xcopy target\classes\app ..\..\baseio-release\http-container\app\ /e /y
+xcopy target\baseio-sample-http-*-SNAPSHOT.jar ..\..\baseio-release\http-container\app\lib\ /y
+xcopy ..\..\baseio-all\target\baseio-all-*-SNAPSHOT.jar ..\..\baseio-release\http-container\lib\ /y
 
+cd ..\..\baseio-release\http-container
 
 set "CURRENT_DIR=%cd%"
-@rem java -Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=6666,suspend=n -cp ./lib/*;  com.generallycloud.baseio.container.startup.ApplicationBootstrap %CURRENT_DIR% true
+rem java -Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=6666,suspend=n -cp ./lib/*;  com.generallycloud.baseio.container.startup.ApplicationBootstrap %CURRENT_DIR% true
 java -cp ./lib/*;  com.generallycloud.baseio.container.startup.ApplicationBootstrap %CURRENT_DIR% true
